[workspace]
members = [
    "day_one/task_01_stack", "day_one/task_02_queue", "day_one/task_03_vector", "day_one/task_04_circular_buffer", "day_one/task_05_ring_buffer", "day_one/task_06_alloc", "day_one/task_07_mempool", "day_one/task_08_smart_ptr",
    # Add more tasks as you create them (e.g., task_02_queue, task_03_reverse)
]
